修改配置文件

--- a/themes/sxiaohe/layout/includes/footer.pug
+++ b/themes/sxiaohe/layout/includes/footer.pug
@@ -9,7 +9,7 @@
         i.fa-fw.fa-link.fa-solid
       a.icon_link(data-pjax-state="" href="/messageboard/" title="留言")
         i.fa-comment.fa-fw.fa-regular
-    img.entered.footer_logo.loaded(data-lazy-src="/img/avatar.avif?v=d3d8e5e465" data-ll-status="loaded" onclick="btf.scrollToDest(0,500)" src="/img/avatar.avif?v=d3d8e5e465" title="返回顶部")
+    img.entered.footer_logo.loaded(data-lazy-src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/avatar.avif?v=d3d8e5e465" data-ll-status="loaded" onclick="btf.scrollToDest(0,500)" src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/avatar.avif?v=d3d8e5e465" title="返回顶部")
     .icon_left
       a.icon_link(href="/" rel="noopener" target="_blank" title="我的主页")
         i.fa-compass.fa-fw.fa-solid
@@ -63,16 +63,16 @@
       }
   p#ghbdages
     a.github-badge(href="https://hexo.io/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="/img/footer_svg/hexo.svg" data-ll-status="loaded" src="/img/footer_svg/hexo.svg")
+      img.entered.loaded(data-lazy-src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/hexo.svg" data-ll-status="loaded" src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/hexo.svg")
     a.github-badge(href="https://butterfly.js.org/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="/img/footer_svg/butterfly.svg" data-ll-status="loaded" src="/img/footer_svg/butterfly.svg")
+      img.entered.loaded(data-lazy-src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/butterfly.svg" data-ll-status="loaded" src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/butterfly.svg")
     a.github-badge(href="https://github.com/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="/img/footer_svg/github.svg" data-ll-status="loaded" src="/img/footer_svg/github.svg")
+      img.entered.loaded(data-lazy-src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/github.svg" data-ll-status="loaded" src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/github.svg")
     a.github-badge(href="https://icp.gov.moe/?keyword=20251949" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="/img/footer_svg/menicp.svg" data-ll-status="loaded" src="/img/footer_svg/menicp.svg")
+      img.entered.loaded(data-lazy-src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/menicp.svg" data-ll-status="loaded" src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/menicp.svg")
     a.github-badge(href="https://jsd.sxiaohe.top/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="/img/footer_svg/jsd.svg" data-ll-status="loaded" src="/img/footer_svg/jsd.svg")
+      img.entered.loaded(data-lazy-src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/jsd.svg" data-ll-status="loaded" src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/jsd.svg")
     a.github-badge(href="https://www.upyun.com/?utm_source=lianmeng&amp;utm_medium=referral" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="/img/footer_svg/ypy.svg" data-ll-status="loaded" src="/img/footer_svg/ypy.svg")
+      img.entered.loaded(data-lazy-src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/ypy.svg" data-ll-status="loaded" src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/ypy.svg")
     a.github-badge(href="http://creativecommons.org/licenses/by-nc-sa/4.0/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="/img/footer_svg/cc.svg" data-ll-status="loaded" src="/img/footer_svg/cc.svg")
+      img.entered.loaded(data-lazy-src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/cc.svg" data-ll-status="loaded" src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/cc.svg")
