--- a/themes/sxiaohe/layout/includes/mixins/article-sort.pug
+++ b/themes/sxiaohe/layout/includes/mixins/article-sort.pug
@@ -25,14 +25,14 @@ mixin articleSort(posts)
                   each item, index in article.categories.data
                     a(href=url_for(item.path)).article-meta__categories #[=item.name]
                     if (index < article.categories.data.length - 1)
-                      i.fas.fa-angle-right
+                      span.article-meta__link •
               if (theme.post_meta.page.tags && article.tags.data.length > 0)
                 span.article-sort-item-tags
                   i.iconfont.icon-biaoqian
                   each item, index in article.tags.data
                     a(href=url_for(item.path)).article-meta__tags #[=item.name]
                     if (index < article.tags.data.length - 1)
-                      span.article-meta__link #[=' ']
+                      span.article-meta__link •
             .article-sort-item-time
               time.post-meta-date-created(datetime=date_xml(article.date) title=_p('post.created') + ' ' + full_date(article.date))= date(article.date, config.date_format)
         i.fas.fa-chevron-right
