优化404页面内容

--- a/themes/sxiaohe/source/css/_sxiaohe-style/404_css/ew.css
+++ b/themes/sxiaohe/source/css/_sxiaohe-style/404_css/ew.css
@@ -23,8 +23,8 @@ div#error-wrap {
     -ms-flex-align: center;
     -webkit-align-items: center;
     align-items: center;
-    padding: 1rem;
-    padding-top: 0;
+    padding-top: 1rem!important;
+    padding: 0!important;
     position: relative;
 }
 .aside-list {
