--- a/themes/sxiaohe/source/css/_sxiaohe-style/page_css/linkMain.css
+++ b/themes/sxiaohe/source/css/_sxiaohe-style/page_css/linkMain.css
@@ -1,13 +1,14 @@
 .status-tag {
     position: absolute;
-    top: 0px;
-    left: 0px;
-    padding: 3px 8px;
-    border-radius: 12px 0px 12px 0px;
-    font-size: 12px;
-    color: white;
-    font-weight: bold;
-    transition: font-size 0.3s ease-out, width 0.3s ease-out, opacity 0.3s ease-out;
+    top: 0;
+    left: 0;
+    padding: 2px 8px;
+    margin: 5px;
+    border-radius: 8px;
+    font-size: 9px;
+    color: #fff;
+    font-weight: 700;
+    transition: font-size .3s ease-out, width .3s ease-out, opacity .3s ease-out;
 }
 .flink-list-item:hover .status-tag {
     font-size: 0px;
