添加选定内容

--- a/themes/sxiaohe/layout/includes/header/nav.pug
+++ b/themes/sxiaohe/layout/includes/header/nav.pug
@@ -34,7 +34,9 @@ nav#nav
       .nav-button#search-button
         a.nav-rightbutton.site-page.darkmode_switchbutton(onclick="switchDarkMode()")
           i.fas.fa-adjust
-
+      //- 美化设置
+      a.meihua.faa-parent.animated-hover(onclick="toggleWinbox()" title="美化设置-自定义你的风格" id="meihua-button")
+        i.fas.fa-images.fa-fw
     .nav-button#toggle-menu
       a.site-page
         i.fas.fa-bars.fa-fw
