添加部分内容

--- a/themes/sxiaohe/layout/includes/header/nav.pug
+++ b/themes/sxiaohe/layout/includes/header/nav.pug
@@ -36,7 +36,7 @@ nav#nav
           i.fas.fa-adjust
       //- 美化设置
       .nav-button#search-button
-        a.meihua.faa-parent.animated-hover(onclick="toggleWinbox()" title="美化设置-自定义你的风格" id="meihua-button")
+        a.site-page.social-icon.search(onclick="toggleWinbox()" title="美化设置-自定义你的风格" id="meihua-button" rel="noopener external nofollow")
           i.fas.fa-images.fa-fw
     .nav-button#toggle-menu
       a.site-page
