添加部分内容

--- a/themes/sxiaohe/layout/includes/widget/card_archives.pug
+++ b/themes/sxiaohe/layout/includes/widget/card_archives.pug
@@ -1,6 +1,6 @@
 if theme.aside.card_archives.enable
   .card-widget.card-archives
-    - let type = theme.aside.card_archives.type || 'monthly'
+    - let type = theme.aside.card_archives.type || 'year'
     - let format = theme.aside.card_archives.format || 'MMMM YYYY'
     - let order = theme.aside.card_archives.order || -1
     - let limit = theme.aside.card_archives.limit === 0 ? 0 : theme.aside.card_archives.limit || 8
