--- a/themes/sxiaohe/source/css/_sxiaohe-style/lib/iconfont.css
+++ b/themes/sxiaohe/source/css/_sxiaohe-style/lib/iconfont.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: iconfont;
-    src: url(https://jsd.sxiaohe.top/iconfont.woff2) format('woff2')
+    src: url(https://jsd.sxiaohe.top/gh/661111/661111.github.io/sxiaohe_source/iconfont.woff2) format('woff2')
 }
 
 .iconfont {
