--- a/themes/sxiaohe/layout/includes/header/post-info.pug
+++ b/themes/sxiaohe/layout/includes/header/post-info.pug
@@ -1,5 +1,5 @@
 - let comments = theme.comments
-#post-info
+#post-info(data-cover=url_for(page.cover))
   h1.post-title= page.title || _p('no_title')
     if theme.post_edit.enable
       a.post-edit-link(href=theme.post_edit.url + page.source title=_p('post.edit') target="_blank")
