--- a/themes/sxiaohe/source/css/_sxiaohe-style/post_css/infoMain.css
+++ b/themes/sxiaohe/source/css/_sxiaohe-style/post_css/infoMain.css
@@ -138,3 +138,7 @@
 #post-info #post-meta .post-meta-icon, #post-info #post-meta .post-meta-label {
     margin-right: 4px;
 }
+
+#post-info {
+    background-image: attr(data-cover url);
+}
