--- a/themes/sxiaohe/source/css/_sxiaohe-style/menu/other_menu.css
+++ b/themes/sxiaohe/source/css/_sxiaohe-style/menu/other_menu.css
@@ -1,3 +1,7 @@
+/* 菜单其他样式 */
+/* 由苏晓河进行编写以及调整 */
+/* 时间：2025年2月4日 */
+
 #nav .menus_items .menus_item {
     border-radius: 50px;
     font-size: 0.95em;
