--- a/themes/sxiaohe/source/css/_sxiaohe-style/widget/tujianMainCard.css
+++ b/themes/sxiaohe/source/css/_sxiaohe-style/widget/tujianMainCard.css
@@ -1,3 +1,7 @@
+/* 页面链接二维码卡片样式表 */
+/* 由苏晓河进行编写以及调整 */
+/* 时间：2025年3月7日 */
+
 #card-tuijian#card-tuijian#card-tuijian#card-tuijian {
     background: linear-gradient(to right, #35bb99db, #2dbcc4db) !important;
     padding: 15px 0;
