--- a/themes/sxiaohe/layout/includes/widget/card_post_toc.pug
+++ b/themes/sxiaohe/layout/includes/widget/card_post_toc.pug
@@ -11,5 +11,5 @@
   if (page.encrypt == true)
     .toc-content.toc-div-class(class=tocExpandClass style="display:none")!=toc(page.origin, {list_number: tocNumber})
   else 
-    .toc-content(class=tocExpandClass)!=toc(page.content, {list_number: tocNumber})
+    .toc-content.tocExpandClass!=toc(page.content, {list_number: tocNumber})
       
