--- a/themes/sxiaohe/source/css/_sxiaohe-style/widget/tocMainCard.css
+++ b/themes/sxiaohe/source/css/_sxiaohe-style/widget/tocMainCard.css
@@ -18,5 +18,6 @@
 }
 /* toc阅读百分比数字 */
 #aside-content #card-toc .toc-percentage {
-    font-size: 183%!important;
+    font-size: 185% !important;
+    margin-top: -25px;
 }
