小改动:首页随机文章移动端可滑动

--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/home/hometop.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/home/hometop.pug
@@ -1,6 +1,6 @@
 #home_top
   .home_top_group
-    #homeTopGroup.homeTopGroup
+    #homeTopGroup.homeTopGroup(style="overflow: scroll;scrollbar-width: none;")
       .left-arrow-tip
       .right-arrow-tip
       .category_group
