--- a/themes/sxiaohe/layout/includes/header/post-info.pug
+++ b/themes/sxiaohe/layout/includes/header/post-info.pug
@@ -3,11 +3,8 @@
 
   #post-meta-top
     if (theme.post_meta.post.categories && page.categories.data.length > 0)
-      span.post-meta-categories
-        if (theme.post_meta.post.date_type)
-          span.post-meta-separator
-        each item, index in page.categories.data
-          i.fas.fa-inbox.fa-fw.post-meta-icon
+      each item, index in page.categories.data
+        span.post-categories
           a(href=url_for(item.path)).post-meta-categories #[=item.name]
           if (index < page.categories.data.length - 1)
             i.fas.fa-angle-right.post-meta-separator
