--- a/themes/sxiaohe/source/css/_sxiaohe-style/post_css/cardMainBg.css
+++ b/themes/sxiaohe/source/css/_sxiaohe-style/post_css/cardMainBg.css
@@ -23,3 +23,9 @@ div#post #article-container {
     margin-left: auto;
     margin-right: auto;
 }
+span.post-categories {
+    margin-left: 10px;
+}
+span.post-categories:nth-child(1) {
+    margin-left: 0;
+}
