小改动:优化文章样式

--- a/themes/sxiaohe/layout/archive.pug
+++ b/themes/sxiaohe/layout/archive.pug
@@ -16,3 +16,7 @@ block content
       .article-sort {
         padding-left: 0!important;
       }
+      .layout>div:first-child:not(.recent-posts) {
+        border-radius: 18px;
+        padding: 10px 35px;
+      }
