--- a/themes/sxiaohe/layout/includes/page/categories.pug
+++ b/themes/sxiaohe/layout/includes/page/categories.pug
@@ -1,1 +1,6 @@
 .category-lists!= list_categories()
+  style.
+    .layout>div:first-child:not(.recent-posts) {
+      border-radius: 18px;
+      padding: 10px 35px!important;
+    }
