--- a/themes/sxiaohe/layout/includes/page/tags.pug
+++ b/themes/sxiaohe/layout/includes/page/tags.pug
@@ -1,2 +1,7 @@
 .tag-cloud-list.is-center
   !=cloudTags({source: site.tags, minfontsize: 1.2, maxfontsize: 2.1, limit: 0, unit: 'em'})
+style.
+  .layout>div:first-child:not(.recent-posts) {
+    border-radius: 18px;
+    padding: 10px 35px!important;
+  }
