小改动:彻底修复

--- a/themes/sxiaohe/source/css/_sxiaohe-style/home/home_style.css
+++ b/themes/sxiaohe/source/css/_sxiaohe-style/home/home_style.css
@@ -36,3 +36,7 @@
     background-position: center;
     z-index: -998;
 }
+.layout>div:first-child:not(.recent-posts) {
+    border-radius: 18px;
+    padding: 10px 35px;
+}
