小改动:彻底修复

--- a/themes/sxiaohe/layout/includes/head.pug
+++ b/themes/sxiaohe/layout/includes/head.pug
@@ -43,8 +43,11 @@ if (theme.pwa && theme.pwa.enable)
   !=partial('includes/head/pwa', {}, {cache: true})
 
 //- main css
-link(rel='stylesheet', href=url_for(theme.asset.main_css))
-link(rel='stylesheet', href=url_for(theme.asset.fontawesomeV6) media="print" onload="this.media='all'")
+link(rel="preload", href=url_for(theme.asset.main_css), as="style", onload="this.onload=null;this.rel='stylesheet'")
+link(rel='preload', href=url_for(theme.asset.fontawesomeV6), as="style", onload="this.onload=null;this.rel='stylesheet'")
+noscript
+  link(rel="stylesheet", href=url_for(theme.asset.main_css))
+  link(rel="stylesheet", href=url_for(theme.asset.fontawesomeV6))
 
 if (theme.snackbar && theme.snackbar.enable)
   link(rel='stylesheet', href=url_for(theme.asset.snackbar_css) media="print" onload="this.media='all'")
