--- a/themes/sxiaohe/layout/includes/sxiaohe_pug/css-neil.pug
+++ b/themes/sxiaohe/layout/includes/sxiaohe_pug/css-neil.pug
@@ -17,6 +17,16 @@ script(type='text/javascript')
   |   window.DISQUS && document.getElementById('disqus_thread').children.length && setTimeout(() => window.disqusReset(), 200);
   | } 
 script(type='text/javascript')
+  | document.addEventListener('DOMContentLoaded', function () {
+  |   const posts = document.querySelectorAll('#post-info');
+  |   posts.forEach(function (post) {
+  |       const cover = post.getAttribute('data-cover');
+  |       if (cover) {
+  |           post.style.backgroundImage = `url(${cover})`;
+  |       }
+  |   });
+  | });
+script(type='text/javascript')
   | if ('serviceWorker' in navigator)
   |   window.addEventListener('load', () => {
   |     navigator.serviceWorker.register('/service-worker.js')
