--- a/themes/sxiaohe/layout/includes/head.pug
+++ b/themes/sxiaohe/layout/includes/head.pug
@@ -43,7 +43,7 @@ if (theme.pwa && theme.pwa.enable)
   !=partial('includes/head/pwa', {}, {cache: true})
 
 //- main css
-link(rel='stylesheet', href=url_for(theme.asset.main_css))
+//- link(rel='stylesheet', href=url_for(theme.asset.main_css))
 link(rel='stylesheet', href=url_for(theme.asset.fontawesomeV6) media="print" onload="this.media='all'")
 
 if (theme.snackbar && theme.snackbar.enable)
@@ -71,3 +71,5 @@ include ./head/noscript.pug
 !=fragment_cache('injectHeadJs', function(){return inject_head_js()})
 
 !=fragment_cache('injectHead', function(){return injectHtml(theme.inject.head)})
+
+<!-- inline-css -->
