小改动:删除引入的index.css采用hexo生成器引入css文件

--- a/themes/sxiaohe/layout/includes/layout.pug
+++ b/themes/sxiaohe/layout/includes/layout.pug
@@ -7,6 +7,7 @@ doctype html
 html(lang=config.language data-theme=theme.display_mode class=htmlClassHideAside)
   head
     include ./head.pug
+    style.neilian-class
   body(style="overflow: auto;")
     if theme.preloader.enable
       !=partial('includes/loading/index', {}, {cache: true})
