小改动:优化seo-1

--- a/themes/sxiaohe/layout/includes/footer.pug
+++ b/themes/sxiaohe/layout/includes/footer.pug
@@ -63,16 +63,16 @@
       }
   p#ghbdages
     a.github-badge(href="https://hexo.io/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/hexo.svg" data-ll-status="loaded" src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/hexo.svg")
+      img.entered.loaded(data-lazy-src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/hexo.svg" data-ll-status="loaded" src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/hexo.svg" alt="hexo")
     a.github-badge(href="https://butterfly.js.org/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/butterfly.svg" data-ll-status="loaded" src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/butterfly.svg")
+      img.entered.loaded(data-lazy-src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/butterfly.svg" data-ll-status="loaded" src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/butterfly.svg" alt="butterfly")
     a.github-badge(href="https://github.com/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/github.svg" data-ll-status="loaded" src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/github.svg")
+      img.entered.loaded(data-lazy-src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/github.svg" data-ll-status="loaded" src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/github.svg" alt="github")
     a.github-badge(href="https://icp.gov.moe/?keyword=20251949" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/menicp.svg" data-ll-status="loaded" src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/menicp.svg")
+      img.entered.loaded(data-lazy-src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/menicp.svg" data-ll-status="loaded" src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/menicp.svg" alt="萌icp") 
     a.github-badge(href="https://jsd.sxiaohe.top/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/jsd.svg" data-ll-status="loaded" src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/jsd.svg")
+      img.entered.loaded(data-lazy-src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/jsd.svg" data-ll-status="loaded" src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/jsd.svg" alt="jsd镜像")
     a.github-badge(href="https://www.upyun.com/?utm_source=lianmeng&amp;utm_medium=referral" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/ypy.svg" data-ll-status="loaded" src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/ypy.svg")
+      img.entered.loaded(data-lazy-src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/ypy.svg" data-ll-status="loaded" src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/ypy.svg" alt="又拍云")
     a.github-badge(href="http://creativecommons.org/licenses/by-nc-sa/4.0/" style="margin-inline:5px" target="_blank")
-      img.entered.loaded(data-lazy-src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/cc.svg" data-ll-status="loaded" src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/cc.svg")
+      img.entered.loaded(data-lazy-src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/cc.svg" data-ll-status="loaded" src="https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/img/footer_svg/cc.svg" alt="by-nc-cc")
