--- a/themes/sxiaohe/layout/includes/head.pug
+++ b/themes/sxiaohe/layout/includes/head.pug
@@ -43,9 +43,7 @@ if (theme.pwa && theme.pwa.enable)
   !=partial('includes/head/pwa', {}, {cache: true})
 
 //- main css
-link(as="style" href=url_for(theme.asset.main_css) onload="this.rel='stylesheet'" rel="preload")
-noscript
-  link(rel='stylesheet', href=url_for(theme.asset.main_css))
+link(rel='stylesheet', href=url_for(theme.asset.main_css) media="print" onload="this.media='all'")
 link(rel='stylesheet', href=url_for(theme.asset.fontawesomeV6) media="print" onload="this.media='all'")
 
 if (theme.snackbar && theme.snackbar.enable)
